# lr_itog

./: .gitignore  CMakeLists.txt  README.md
data/: input.json  input_large.json
docs/: Implementation_Plan.md  REPORT.md  bench.md
include/: cipher.h
src/: cipher.cpp  json_parser.cpp  json_parser.h  logger.cpp  logger.h  main.cpp
tests/: test_cipher.cpp  test_json.cpp
